# docs/swagger.json
@@ -91,8 +91,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "List of todo items",
+                    "201": {
+                        "description": "Created todo task",
                         "schema": {
                             "allOf": [
                                 {
@@ -142,7 +142,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of todo items",
+                        "description": "Founded todo task",
                         "schema": {
                             "allOf": [
                                 {
@@ -199,7 +199,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of todo items",
+                        "description": "Updated todo task",
                         "schema": {
                             "allOf": [
                                 {
@@ -247,7 +247,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of todo items",
+                        "description": "Successful response",
                         "schema": {
                             "$ref": "#/definitions/handler.Response"
                         }
@@ -285,7 +285,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of todo items",
+                        "description": "Successful response",
                         "schema": {
                             "$ref": "#/definitions/handler.Response"
                         }
@@ -323,7 +323,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of todo items",
+                        "description": "Successful response",
                         "schema": {
                             "$ref": "#/definitions/handler.Response"
                         }
